k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gardem-api
  name: gardem-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gardem-api
  strategy: {}
  template:
    metadata:
      labels:
        app: gardem-api
    spec:
      volumes:
        - name: api-secrets
          secret:
            secretName: gardem-api-secrets
      imagePullSecrets:
        - name: registry-secrets
      containers:
        - image: registry.internal:5000/matias/gardem-api:v1.0.0
          name: gardem-api
          volumeMounts:
            - name: api-secrets
              mountPath: /etc/secrets/pub.key
              subPath: PUB_KEY
              readOnly: true
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "200m"
              memory: 192M
            requests:
              cpu: "100m"
              memory: 128M
          livenessProbe:
            httpGet:
              path: /v1/live
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /v1/ready
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
