k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: gardem-api
spec:
  rules:
    - host: api.dev.internal
      http:
        paths:
          - backend:
              service:
                name: gardem-api
                port:
                  number: 8000
            path: /
            pathType: Prefix
